--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
 	"type": "module",
 	"description": "This is an example of an Apify actor.",
 	"engines": {
-		"node": ">=18.0.0"
+		"node": ">=22.0.0"
 	},
 	"dependencies": {
-		"@crawlee/memory-storage": "^3.8.2",
-		"apify": "^3.1.10",
+		"@crawlee/memory-storage": "^3.15.2",
+		"apify": "^3.5.1",
 		"cheerio": "^1.0.0-rc.12",
-		"crawlee": "^3.9.1",
+		"crawlee": "^3.15.2",
 		"header-generator": "^2.1.50",
-		"playwright": "*",
+		"playwright": "1.54.1",
 		"uuid": "^9.0.1"
 	},
 	"devDependencies": {
@@ -23,7 +23,8 @@
 		"@typescript-eslint/parser": "^6.7.2",
 		"eslint": "^8.50.0",
 		"tsx": "^4.6.2",
-		"typescript": "^5.3.3"
+        "typescript": "^5.8.3"
+
 	},
 	"scripts": {
 		"start": "npm run start:dev",
