--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,9 +7,7 @@
         "outDir": "dist",
         "noUnusedLocals": false,
         "skipLibCheck": true,
-        "lib": ["DOM"]
+        "lib": ["DOM","ES2022"]
     },
-    "include": [
-        "./src/**/*"
-    ]
+    "include": ["./src/**/*"]
 }
